[package]
name = "dexrs"
version = "0.5.0"
authors = ["Michael Aaron Murphy <mmstick@pm.me>"]
edition = "2021"
homepage = "https://github.com/pop-os/freedesktop-desktop-entry"
description = "Freedesktop Desktop Entry Specification"
license = "MPL-2.0"
readme = "README.md"
categories = [ "os::unix-apis" ]
keywords = [ "freedesktop", "desktop", "entry" ]
maintenance = { status = "passively-maintained" }

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"]}
memchr = "2"
thiserror = "1"
xdg = "2.4"
shellexpand = "3"

[dev-dependencies]
speculoos = "0.11"
